testsuites/LLT/compiler/Diagnose/lex_test/lex_unknown_start_of_token/case12.expect.out
error: unknown start of token: \u{0000}
  ==> case12.cj:13:13:
   | 
13 |     "cangjie ${\u{0000}}"
   |                ^^^^^^^^ unknown start of token: \u{0000}
   | 

1 error generated, 1 error printed.
